Refactoring Cobalt